# AOS_Project

./: .gitmodules  Kconfig  README.md  bosp.mk
cpp/: Kconfig  bosp.mk
cpp/FFT/: CMakeLists.txt  Doxyfile.in  FFT.conf.in  Kconfig  README.md  bosp.mk
cpp/FFT/include/: FFT_exc.h  version.h
cpp/FFT/src/: CMakeLists.txt  FFT_exc.cc  FFT_main.cc  version.cc.in
cpp/HelloCPP/: CMakeLists.txt  Doxyfile.in  HelloCPP.conf.in  Kconfig  bosp.mk
cpp/HelloCPP/include/: HelloCPP_exc.h  version.h
cpp/HelloCPP/src/: CMakeLists.txt  HelloCPP_exc.cc  HelloCPP_main.cc  version.cc.in
fortran/: Kconfig  bosp.mk
opencl/: Kconfig  bosp.mk
opencv/: Kconfig  bosp.mk
opencv/edge_detector/: CMakeLists.txt  EdgeDetector.conf.in  Kconfig  ReadMe.md  bosp.mk
opencv/edge_detector/include/: EdgeDetector_exc.h  version.h
opencv/edge_detector/src/: CMakeLists.txt  EdgeDetector_exc.cc  EdgeDetector_main.cc  version.cc.in
opencv/hough_circles/: CMakeLists.txt  Doxyfile.in  HoughCircles.conf.in  Kconfig  README.md  bosp.mk
opencv/hough_circles/doc/: README.md
opencv/hough_circles/include/: HoughCircles_exc.h  version.h
opencv/hough_circles/src/: CMakeLists.txt  HoughCircles.sh  HoughCircles_exc.cc  HoughCircles_main.cc  version.cc.in
python/: Kconfig  bosp.mk
python/PySample/: CMakeLists.txt  Kconfig  PySample.conf.in  PySample.py  bosp.mk
python/PySample/recipes/: PySample.recipe
